# TraceLab

./: .gitignore  README.md  launch.sh  pyproject.toml  summary.json  todo.md
artifacts/: README.md  run_all.py
artifacts/utils/: DB_SCHEMA.md  README.md  accumulators.py  cdf.py  formatters.py  growth.py  png_sidecar.py  pricing.json  style.py  timing.py  tool_stats.py  trace_db.py  trace_loader.py
artifacts/web_analytics/: _overview.py  analyze.py  cost_breakdown.py  daily.py  distributions.py  facts.py  kpis.py  pricing.py  rounds.py  sessions.py  stats.py
config/: services.json
dev-docs/session-runner/: README.md  backend-architecture.md  llamacpp-backend.md  sglang-backend.md
docs/: README.md  prompt_cache_accounting.md
example_sessions/claude/: explanation.md  trace.json
example_sessions/codex/: explanation.md  trace.json
example_sessions/derived/: README.md  round_trace.expanded.json  round_trace.jsonl
example_sessions/sanitized/: README.md  round_trace.expanded.json  round_trace.jsonl
replay/: .gitignore  Cargo.toml  README.md
replay/examples/: multi_session_example.csv  multi_session_large.csv  session_workload_example.csv
replay/src/: backend.rs  cli.rs  main.rs  record.rs  session.rs  summary.rs  tokens.rs  trace.rs  util.rs  vllm.rs  workload.rs
replay/src/backend/: capabilities.rs  client.rs  llamacpp.rs  mod.rs  preflight.rs  sglang.rs  stream.rs  vllm.rs
scripts/: collect_all_users_sudo.sh  collect_llm_traces.py  extract_claude_rounds.py  extract_codex_rounds.py  find_representative_session_segments.py  sanitize_round_trace.py  trace_privacy.py
skills/coding-trace-analyze/: SKILL.md
skills/coding-trace-collect/: SKILL.md
skills/coding-trace-normalize/: SKILL.md
skills/coding-trace-raw/: SKILL.md
skills/coding-trace-sanitize/: SKILL.md
trace/: README.md
validators/: README.md  run_all.py
web/: .gitignore  README.md  justfile
web/ai_infra/: README.md  app.py  (+8 more)
(+218 files in other folders)
