[package]
name = "tracelab-session-runner"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Session-aware closed-loop workload runner for inference backends"

[[bin]]
name = "session_runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
fdlimit = "0.3"
futures = "0.3"
hf-hub = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.19"
tokio = { version = "1.36", features = ["full"] }
